--- a/index.css
+++ b/index.css
@@ -144,3 +144,46 @@ fill: #0cbc87 !important;
     font-size: 1.3125rem;
 
 }
+
+/* courses */
+
+.courses{
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
+    background-color: #F5F7F9;
+}
+
+.courses-text h2{
+    font-size: 2.34375rem;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+    font-family: "Heebo", sans-serif;
+    font-weight: 700;
+    line-height: 1.25;
+    color: #24292d;
+}
+
+.text-courses span{
+    text-align: center;
+}
+
+.courses-background{
+    background-color: white;
+    padding: 30%;
+}
+.courses-1{
+    width: 14.5rem;
+}
+
+.card{
+    margin: 1.5%;
+    text-align: center;
+}   
+.card-img-top{
+    height: 100px;
+    width: 100px;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+}
