--- a/index.css
+++ b/index.css
@@ -187,3 +187,97 @@ fill: #0cbc87 !important;
     margin-left: 2.5rem;
     margin-right: 2.5rem;
 }
+
+
+/* image */
+
+img{
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+
+.move-1{
+    position: relative;
+    bottom: 40%;
+}
+
+
+
+.move-image{
+    width:259.5px;
+     height:346px;
+     margin-bottom: 5%;
+}
+.move-image-1{
+    width:259.5px;
+     height:194.63px;
+     margin-bottom: 1%;
+}
+
+
+
+
+
+
+@media screen and (max-device-width: 480px){
+    .move{
+        position: relative;
+        bottom: 0%;
+        margin-bottom: 3%;
+    }
+   .move-image{
+       width:179.53px !important;
+       height: 134.63px !important;
+   }
+   .move-image-1{
+        width: 179.5px !important;
+        height: 134.63px !important;
+    }
+    .image-care-move{
+        position: relative;
+        top: 0% !important;
+    }
+}
+
+@media screen and (min-device-width: 481px) and (max-device-width: 768px){
+    .image-care-move{
+        position: relative;
+        top: 0% !important;
+    }
+
+    .move{
+        position: relative;
+        bottom: 0%;
+        margin-bottom: 3%;
+    }
+   .move-image{
+       width:220.53px !important;
+       height: 194.63px !important;
+   }
+   .move-image-1{
+        width: 220.5px !important;
+        height: 194.63px !important;
+    }
+    .image-care-move{
+        position: relative;
+        top: 0% !important;
+    }
+}
+
+@media screen and (min-device-width: 769px) and (max-device-width: 1023px){
+    .move-image{
+        width:220.53px !important;
+        height: 194.63px !important;
+    }
+    .move-image-1{
+        width: 220.5px !important;
+        height: 194.63px !important;
+    }
+    .move-1{ 
+        position: relative;
+        bottom: 0%;
+    }
+}
