--- a/index.css
+++ b/index.css
@@ -4,13 +4,24 @@
     background: #fff !important;
 }
 
-
-/* home */
-
 section{
     padding-top: 3.5rem;
     padding-bottom: 2.8rem;
     display: block;
+}
+p{
+color: gray;
+}
+
+
+
+/* home */
+
+.home{
+    padding-top: 3.5rem;
+    padding-bottom: 2.8rem;
+    display: block;
+    position: relative;
 }
 p{
 color: gray;
@@ -31,7 +42,12 @@ height: auto;
     74deg
     ) !important;
 }
-
+.fill-purple {
+    fill: #6f42c1 !important;
+}
+.fill-warning {
+    fill: #f7c32e !important;
+}
 .home-text h6{
 font-family: "Roboto", sans-serif !important;
 border-radius: 0.325rem !important;
@@ -130,6 +146,18 @@ fill: #0cbc87 !important;
 
 
 /* care */
+
+.care{
+    position: relative;
+    padding-top: 3rem !important;
+    padding-bottom: 3.5rem !important;
+    
+}
+.top-40{
+    position: absolute;
+    top: 40%;
+}
+
 .care-image{
     padding-right: 1.6rem !important;
     padding-left: 1.6rem !important;
@@ -145,9 +173,25 @@ fill: #0cbc87 !important;
 
 }
 
+
+.fill-orange {
+    fill: #fd7e14 !important;
+}
+.fill-danger {
+    fill: #d6293e !important;
+}
+.fill-success {
+    fill: #0cbc87 !important;
+}
+
 /* courses */
 
 .courses{
+  
+
+    
+    overflow: hidden !important;
+    position: relative;
     padding-top: 3rem !important;
     padding-bottom: 3rem !important;
     background-color: #F5F7F9;
@@ -169,16 +213,21 @@ fill: #0cbc87 !important;
 
 .courses-background{
     background-color: white;
-    padding: 30%;
+    border-radius: 0.5rem !important;
+    height: fit-content;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
+    width: min-content;
+    margin: 2.7%;
+    text-align: center;
 }
 .courses-1{
-    width: 14.5rem;
+    width: 15.0rem;
 }
 
-.card{
-    margin: 1.5%;
-    text-align: center;
-}   
+ 
 .card-img-top{
     height: 100px;
     width: 100px;
@@ -189,19 +238,18 @@ fill: #0cbc87 !important;
 }
 
 
-/* image */
-
-img{
+.imagess{
     max-width: 100%;
     height: auto;
 }
-
-
-
+.image-section{
+    height: 588.625px;
+}
 
 .move-1{
     position: relative;
     bottom: 40%;
+    
 }
 
 
@@ -216,22 +264,28 @@ img{
      height:194.63px;
      margin-bottom: 1%;
 }
-
-
 /* footer */
+
+.fill-white{
+    fill: white;
+}
 
 .fill-body{
     fill: white;
 }
-
-.footer{
+.bg-success {
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
+}
+.footer{
+    /* --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important; */
     padding-top: 0 !important;
     position: relative !important;
     display: block;
     overflow: hidden;
     color: white;
+    background-color: #4ABD88;
 }
 
 
@@ -251,7 +305,6 @@ img{
 }
 
 
-
 @media screen and (max-device-width: 480px){
     .move{
         position: relative;
@@ -269,6 +322,10 @@ img{
     .image-care-move{
         position: relative;
         top: 0% !important;
+    }
+    .background-courses{
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
@@ -294,6 +351,13 @@ img{
     .image-care-move{
         position: relative;
         top: 0% !important;
+    }
+    .image-section{
+        height: auto;
+    }
+    .background-courses{
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
