--- a/index.css
+++ b/index.css
@@ -10,10 +10,8 @@ section{
     display: block;
 }
 p{
-color: gray;
+    color: gray;
 }
-
-
 
 /* home */
 
@@ -23,24 +21,18 @@ color: gray;
     display: block;
     position: relative;
 }
-p{
-color: gray;
-}
+
 .home{
-position: relative;
-padding-top: 3rem !important;
-padding-bottom: 3rem !important;
+    position: relative;
+    padding-top: 3rem !important;
+    padding-bottom: 3rem !important;
 }
 
 .rocket{
-max-width: 100%;
-height: auto;
--webkit-transform: rotate(
-    74deg
-    ) !important;
-        transform: rotate(
-    74deg
-    ) !important;
+    max-width: 100%;
+    height: auto;
+    -webkit-transform: rotate(74deg) !important;
+    transform: rotate(74deg) !important;
 }
 .fill-purple {
     fill: #6f42c1 !important;
@@ -49,96 +41,95 @@ height: auto;
     fill: #f7c32e !important;
 }
 .home-text h6{
-font-family: "Roboto", sans-serif !important;
-border-radius: 0.325rem !important;
-color: white;
- padding-top: 0.5rem !important;
-padding-bottom: 0.5rem !important;
-padding-right: 1.6rem !important;
-padding-left: 1.6rem !important;
-margin-bottom: 1rem !important;
-display: inline-block !important;
-font-size: 0.9375rem;
-background-color: #1D3B53;
+    font-family: "Roboto", sans-serif !important;
+    border-radius: 0.325rem !important;
+    color: white;
+    padding-top: 0.5rem !important;
+    padding-bottom: 0.5rem !important;
+    padding-right: 1.6rem !important;
+    padding-left: 1.6rem !important;
+    margin-bottom: 1rem !important;
+    display: inline-block !important;
+    font-size: 0.9375rem;
+    background-color: #1D3B53;
 }
 
 .home-text h1{
-font-size: 2.8125rem;
+    font-size: 2.8125rem;
 }
 .home-text p{
-margin-bottom: 3rem !important;
+    margin-bottom: 3rem !important;
 }
 .fill-info {
-fill: #17a2b8 !important;
+    fill: #17a2b8 !important;
 }
 
 
 .home-text-logo-1{
-width: 3.5rem;
-height: 3.5rem;
-line-height: 3.5rem;
-text-align: center;
-font-size: 1.2rem;
---bs-bg-opacity: 1;
-background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
---bs-text-opacity: 1;
-color: rgba(var(--bs-info-rgb), var(--bs-text-opacity)) !important;
--webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
-margin-bottom: 0 !important;
-border-radius: 50%;
-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.5rem;
+    text-align: center;
+    font-size: 1.2rem;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-info-rgb), var(--bs-text-opacity)) !important;
+    -webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    margin-bottom: 0 !important;
+    border-radius: 50%;
+    box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
 }
 
 .home-text-logo-2{
-width: 3.5rem;
-height: 3.5rem;
-line-height: 3.5rem;
-text-align: center;
-font-size: 1.2rem;
---bs-bg-opacity: 1;
-background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
---bs-text-opacity: 1;
-color: rgba(var(--bs-purple-rgb), var(--bs-text-opacity)) !important;
--webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
-margin-bottom: 0 !important;
-border-radius: 50%;
-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.5rem;
+    text-align: center;
+    font-size: 1.2rem;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-purple-rgb), var(--bs-text-opacity)) !important;
+    -webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    margin-bottom: 0 !important;
+    border-radius: 50%;
+    box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
 }
 .home-text-logo-3{
-width: 3.5rem;
-height: 3.5rem;
-line-height: 3.5rem;
-text-align: center;
-font-size: 1.2rem;
---bs-bg-opacity: 1;
-background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
---bs-text-opacity: 1;
---bs-text-opacity: 1;
-color: rgba(var(--bs-danger-rgb), var(--bs-text-opacity)) !important;
--webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
-margin-bottom: 0 !important;
-border-radius: 50%;
-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.5rem;
+    text-align: center;
+    font-size: 1.2rem;
+    --bs-bg-opacity: 1;
+    background-color: rgba(var(--bs-body-bg-rgb), var(--bs-bg-opacity)) !important;
+    --bs-text-opacity: 1;
+    --bs-text-opacity: 1;
+    color: rgba(var(--bs-danger-rgb), var(--bs-text-opacity)) !important;
+    -webkit-box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
+    margin-bottom: 0 !important;
+    border-radius: 50%;
+    box-shadow: 0px 0px 40px rgb(29 58 83 / 15%) !important;
 }
 .fa-user-graduate{
-font-weight: 900;
-text-align: center;
-width: 1.25em;
+    font-weight: 900;
+    text-align: center;
+    width: 1.25em;
 }
 .home-text-1 h5{
-font-size: 1.3125rem;
+    font-size: 1.3125rem;
 }
-
 .home-text-1-para{
-color: gray;
+    color: gray;
 }
 .btn-primary-soft:hover {
-color: #fff;
-background-color: #066ac9;}
+    color: #fff;
+    background-color: #066ac9;
+}
 .btn-primary-soft{
-background-color: #066ac9;
-background-color: rgba(6, 106, 201, 0.1);
-
+    background-color: #066ac9;
+    background-color: rgba(6, 106, 201, 0.1);
 }
 .fill-success {
 fill: #0cbc87 !important;
@@ -163,7 +154,8 @@ fill: #0cbc87 !important;
     padding-left: 1.6rem !important;
 }
 
-.text-care h5{margin-top: 0;
+.text-care h5{
+    margin-top: 0;
     margin-bottom: 0.5rem;
     font-family: "Heebo", sans-serif;
     font-weight: 700;
@@ -187,9 +179,6 @@ fill: #0cbc87 !important;
 /* courses */
 
 .courses{
-  
-
-    
     overflow: hidden !important;
     position: relative;
     padding-top: 3rem !important;
@@ -226,8 +215,6 @@ fill: #0cbc87 !important;
 .courses-1{
     width: 15.0rem;
 }
-
- 
 .card-img-top{
     height: 100px;
     width: 100px;
@@ -236,8 +223,6 @@ fill: #0cbc87 !important;
     margin-left: 2.5rem;
     margin-right: 2.5rem;
 }
-
-
 .imagess{
     max-width: 100%;
     height: auto;
@@ -248,12 +233,8 @@ fill: #0cbc87 !important;
 
 .move-1{
     position: relative;
-    bottom: 40%;
-    
+    bottom: 40%;   
 }
-
-
-
 .move-image{
     width:259.5px;
      height:346px;
@@ -269,7 +250,6 @@ fill: #0cbc87 !important;
 .fill-white{
     fill: white;
 }
-
 .fill-body{
     fill: white;
 }
@@ -278,8 +258,6 @@ fill: #0cbc87 !important;
     background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
 }
 .footer{
-    /* --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important; */
     padding-top: 0 !important;
     position: relative !important;
     display: block;
@@ -287,21 +265,14 @@ fill: #0cbc87 !important;
     color: white;
     background-color: #4ABD88;
 }
-
-
 .btn-white {
     background: #fff;}
-
 .body-fill{
     fill: white;
 }
 .rotate-180 {
-    -webkit-transform: rotate(
-180deg
-) !important;
-    transform: rotate(
-180deg
-) !important;
+    -webkit-transform: rotate(180deg) !important;
+    transform: rotate(180deg) !important;
 }
 
 
